[metadata]
name = eth-logo
version = 0.1.0
author = Marto
author_email = martinlsanchez@gmail.com
description = Python lib to print Ethereum logo of any size and style on your terminal or standard output.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0xMarto/eth-logo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = find:
package_dir =
    = src
scripts =
    src/eth_logo/eth_logo_script.py

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    print-eth = eth_logo:print_eth_script